--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Testing
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize, reopened]
   workflow_run:
     workflows: ["Lint"]
     types:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    if: ${{github.event.workflow_run.conclusion == 'success'}}
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
